--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
         node-version: [16.x]
     steps:
       - name: 1. 检查master分支
-        uses: actions/checkout
+        uses: actions/checkout@master
 
       - name: 2. 设置Node.js
-        uses: actions/setup-node
+        uses: actions/setup-node@master
         with:
           node-version: ${{ matrix.node-version }}
 
